# HoloTableGame

./: .clang-format  .gitignore  CMakeLists.txt  Dev Notes.txt  Readme.md
game_lib/: config.cppm  game.cppm  game.mxx  math.cppm  renderer.cppm
game_lib/include/: config.h  game.h  renderer.h
game_lib/src/: config.c  renderer.c
graphical_client/: main.c  main.cpp  main.cxx  rgfw.c
graphical_client/assets/: options.toml
headless/: main.cxx
headless_client/: main.c  main.cpp
tests/: main.c  main.cpp
