CMAKE_MINIMUM_REQUIRED(VERSION 4.1.2 FATAL_ERROR)
SET(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "d0edc3af-4c50-42ea-a356-e2862fe7a444")
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
PROJECT(HoloTable CXX C)

ADD_COMPILE_OPTIONS(
								-Wall
								-Wextra
								-Wpedantic
								-pedantic
								-O0
								-g
)


INCLUDE_DIRECTORIES(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/third_party)

#FIND_PACKAGE(Vulkan REQUIRED)
#INCLUDE_DIRECTORIES(SYSTEM ${Vulkan_INCLUDE_DIRS})

ADD_LIBRARY(RGFW SHARED ${CMAKE_CURRENT_SOURCE_DIR}/graphical_client/rgfw.c)
SET_TARGET_PROPERTIES(RGFW PROPERTIES LINKER_LANGUAGE C)
#TARGET_LINK_LIBRARIES(RGFW PUBLIC ${Vulkan_LIBRARIES})
TARGET_COMPILE_DEFINITIONS(RGFW PRIVATE RGFW_EXPORT RGFW_NO_API)
IF (WIN32)
	target_link_libraries(RGFW PUBLIC gdi32 user32)
ELSE()
	MESSAGE(STATUS "Platform: Unix-like. Using X11.")
	FIND_PACKAGE(X11 REQUIRED)
	FIND_PACKAGE(PkgConfig REQUIRED)
	PKG_CHECK_MODULES(XRANDR REQUIRED xrandr)
	TARGET_LINK_LIBRARIES(RGFW PRIVATE ${XRANDR_LIBRARIES})
	TARGET_INCLUDE_DIRECTORIES(RGFW PRIVATE ${XRANDR_INCLUDE_DIRS})
	IF(X11_FOUND)
		MESSAGE(STATUS "Configuring RGFW with X11 support.")
		TARGET_COMPILE_DEFINITIONS(RGFW PUBLIC RGFW_X11 RGFW_NO_WAYLAND)
		TARGET_LINK_LIBRARIES(RGFW PRIVATE ${X11_LIBRARIES})
	ELSE()
		MESSAGE(FATAL_ERROR "X11 not found.")
	ENDIF()
ENDIF()

SET(CMAKE_CXX_SCAN_FOR_MODULES ON)
ADD_EXECUTABLE(holotable ${CMAKE_CURRENT_SOURCE_DIR}/graphical_client/main.cxx)
SET_TARGET_PROPERTIES(holotable PROPERTIES CXX_MODULE_STD ON)
TARGET_LINK_LIBRARIES(holotable PRIVATE RGFW)

ADD_EXECUTABLE(tests ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cxx)
SET_TARGET_PROPERTIES(tests PROPERTIES CXX_MODULE_STD ON)
